[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/transparent.png" type="Texture" id=1]
[ext_resource path="res://scenes/input_passer.gd" type="Script" id=2]
[ext_resource path="res://scenes/main.gd" type="Script" id=3]

[sub_resource type="ButtonGroup" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_lock_": true
}

[node name="TopBar" type="PanelContainer" parent="Layout"]
margin_right = 1024.0
margin_bottom = 34.0

[node name="Buttons" type="HBoxContainer" parent="Layout/TopBar"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 27.0
custom_constants/separation = 0

[node name="FileButton" type="MenuButton" parent="Layout/TopBar/Buttons"]
unique_name_in_owner = true
margin_right = 35.0
margin_bottom = 20.0
text = "File"
items = [ "Open File", null, 0, false, false, 0, 0, null, "", false, "Close File", null, 0, false, true, 1, 0, null, "", false, "Save", null, 0, false, true, 2, 0, null, "", false, "Load", null, 0, false, false, 3, 0, null, "", false ]
switch_on_hover = true

[node name="SpriteButton" type="MenuButton" parent="Layout/TopBar/Buttons"]
unique_name_in_owner = true
margin_left = 35.0
margin_right = 84.0
margin_bottom = 20.0
text = "Sprite"
items = [ "Cut by Grid", null, 0, false, false, 0, 0, null, "", false, "Detect Sprites", null, 0, false, false, 1, 0, null, "", false ]
switch_on_hover = true

[node name="ExportButton" type="MenuButton" parent="Layout/TopBar/Buttons"]
unique_name_in_owner = true
margin_left = 84.0
margin_right = 136.0
margin_bottom = 20.0
text = "Export"
items = [ "Export as Individual Images", null, 0, false, false, 0, 0, null, "", false ]
switch_on_hover = true

[node name="HelpButton" type="MenuButton" parent="Layout/TopBar/Buttons"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 178.0
margin_bottom = 20.0
text = "Help"
items = [ "Help", null, 0, false, false, 0, 0, null, "", false, "Credits", null, 0, false, false, 1, 0, null, "", false ]
switch_on_hover = true

[node name="Main" type="HBoxContainer" parent="Layout"]
margin_top = 34.0
margin_right = 1024.0
margin_bottom = 558.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Tree" type="Tree" parent="Layout/Main"]
margin_right = 150.0
margin_bottom = 524.0
rect_min_size = Vector2( 150, 0 )
select_mode = 2

[node name="Scroll" type="ScrollContainer" parent="Layout/Main"]
margin_left = 150.0
margin_right = 925.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Images" type="Control" parent="Layout/Main/Scroll"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="Layout/Main/Scroll/Images"]
visible = false
texture = ExtResource( 1 )
expand = true
stretch_mode = 2

[node name="Image" type="TextureRect" parent="Layout/Main/Scroll/Images"]
mouse_filter = 0

[node name="Sidebar" type="VBoxContainer" parent="Layout/Main"]
margin_left = 925.0
margin_right = 1024.0
margin_bottom = 524.0
custom_constants/separation = 0

[node name="EditSprites" type="Button" parent="Layout/Main/Sidebar"]
margin_right = 99.0
margin_bottom = 20.0
focus_mode = 0
toggle_mode = true
pressed = true
group = SubResource( 1 )
text = "Edit Sprites"

[node name="SelectSprites" type="Button" parent="Layout/Main/Sidebar"]
margin_top = 20.0
margin_right = 99.0
margin_bottom = 40.0
focus_mode = 0
toggle_mode = true
group = SubResource( 1 )
text = "Select Sprites"

[node name="AutoSprite" type="Button" parent="Layout/Main/Sidebar"]
margin_top = 40.0
margin_right = 99.0
margin_bottom = 60.0
focus_mode = 0
toggle_mode = true
group = SubResource( 1 )
text = "Auto Sprite"

[node name="BottomBar" type="PanelContainer" parent="Layout"]
margin_top = 558.0
margin_right = 1024.0
margin_bottom = 586.0

[node name="HBox" type="HBoxContainer" parent="Layout/BottomBar"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 21.0
custom_constants/separation = 0

[node name="Zoom" type="Label" parent="Layout/BottomBar/HBox"]
margin_right = 40.0
margin_bottom = 14.0
text = "100% "

[node name="MousePos" type="Label" parent="Layout/BottomBar/HBox"]
margin_left = 978.0
margin_right = 1010.0
margin_bottom = 14.0
size_flags_horizontal = 10
text = "(0, 0)"
align = 2

[node name="ProgressBar" type="ProgressBar" parent="Layout"]
margin_top = 586.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.png" )

[node name="Note" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 200 )
dialog_autowrap = true

[node name="Help" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 300 )

[node name="Label" type="Label" parent="Help"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
text = "Left click and drag to make a new sprite
Delete or backspace to delete selected sprites
Space or middle mouse to move around
Shift click to select multiple sprites at once"
align = 1
valign = 1
autowrap = true

[node name="Credits" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -50.0
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 100 )

[node name="Label" type="RichTextLabel" parent="Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
bbcode_enabled = true
bbcode_text = "[center]Credits
Lead Dev Exuin (Emily2)
Code from Wasted, KamiGrave
Name, mascot from L4Vo5
Based on code from [url=https://github.com/ForkandBeard/Alferd-Spritesheet-Unpacker]Alferd Spritesheet Unpacker[/url][/center]"
text = "Credits
Lead Dev Exuin (Emily2)
Code from Wasted, KamiGrave
Name, mascot from L4Vo5
Based on code from Alferd Spritesheet Unpacker"

[node name="Cut" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 300 )

[node name="VBox" type="VBoxContainer" parent="Cut"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
alignment = 1

[node name="Top" type="HBoxContainer" parent="Cut/VBox"]
margin_top = 108.0
margin_right = 392.0
margin_bottom = 132.0
alignment = 1

[node name="Label" type="Label" parent="Cut/VBox/Top"]
margin_left = 71.0
margin_top = 5.0
margin_right = 104.0
margin_bottom = 19.0
text = "Rows"

[node name="Rows" type="SpinBox" parent="Cut/VBox/Top"]
margin_left = 108.0
margin_right = 182.0
margin_bottom = 24.0
min_value = 1.0
max_value = 10000.0
value = 1.0

[node name="Label2" type="Label" parent="Cut/VBox/Top"]
margin_left = 186.0
margin_top = 5.0
margin_right = 242.0
margin_bottom = 19.0
text = "Columns"

[node name="Columns" type="SpinBox" parent="Cut/VBox/Top"]
margin_left = 246.0
margin_right = 320.0
margin_bottom = 24.0
min_value = 1.0
max_value = 10000.0
value = 1.0

[node name="Bottom" type="HBoxContainer" parent="Cut/VBox"]
margin_top = 136.0
margin_right = 392.0
margin_bottom = 160.0
alignment = 1

[node name="Label" type="Label" parent="Cut/VBox/Bottom"]
margin_left = 77.0
margin_top = 5.0
margin_right = 115.0
margin_bottom = 19.0
text = "Y-size"

[node name="YSize" type="SpinBox" parent="Cut/VBox/Bottom"]
margin_left = 119.0
margin_right = 193.0
margin_bottom = 24.0
min_value = 1.0
value = 1.0

[node name="Label2" type="Label" parent="Cut/VBox/Bottom"]
margin_left = 197.0
margin_top = 5.0
margin_right = 236.0
margin_bottom = 19.0
text = "X-size"

[node name="XSize" type="SpinBox" parent="Cut/VBox/Bottom"]
margin_left = 240.0
margin_right = 314.0
margin_bottom = 24.0
min_value = 1.0
value = 1.0

[node name="CutOk" type="Button" parent="Cut/VBox"]
margin_left = 181.0
margin_top = 164.0
margin_right = 211.0
margin_bottom = 184.0
size_flags_horizontal = 4
text = "Ok"

[connection signal="item_edited" from="Layout/Main/Tree" to="." method="_on_Tree_item_edited"]
[connection signal="multi_selected" from="Layout/Main/Tree" to="." method="_on_Tree_multi_selected"]
[connection signal="nothing_selected" from="Layout/Main/Tree" to="." method="_on_Tree_nothing_selected"]
[connection signal="gui_input" from="Layout/Main/Scroll" to="." method="outside_sprite_gui_input"]
[connection signal="gui_input" from="Layout/Main/Scroll/Images" to="." method="outside_sprite_gui_input"]
[connection signal="gui_input" from="Layout/Main/Scroll/Images/Image" to="." method="outside_sprite_gui_input"]
[connection signal="resized" from="Layout/Main/Scroll/Images/Image" to="." method="_on_TextureRect_resized"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="meta_clicked" from="Credits/Label" to="." method="_on_Label_meta_clicked"]
[connection signal="pressed" from="Cut/VBox/CutOk" to="." method="_on_CutOk_pressed"]
